--- a/user-service/package.json
+++ b/user-service/package.json
@@ -4,7 +4,7 @@
   "description": "A microservice responsible for user authentication and management, including user registration, login, and authentication token handling using JWT. It integrates with MongoDB for user data storage and follows a modular architecture using Express.js.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon src/server.ts",
     "dev": "nodemon server.js"
   },
   "userService": {
