--- a/user-service/package.json
+++ b/user-service/package.json
@@ -4,8 +4,9 @@
   "description": "A microservice responsible for user authentication and management, including user registration, login, and authentication token handling using JWT. It integrates with MongoDB for user data storage and follows a modular architecture using Express.js.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.ts",
-    "dev": "nodemon server.js"
+    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+    "build": "rm -rf build/ && tsc -p .",
+    "start": "cross-env NODE_ENV=production nodemon build/server.js"
   },
   "userService": {
     "features": {
@@ -87,5 +88,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
