--- a/chat-service/Dockerfile
+++ b/chat-service/Dockerfile
@@ -1,1 +1,16 @@
  
+FROM node:18-alpine
+
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
+RUN npm install
+
+COPY . .
+
+RUN npm run build
+
+EXPOSE 8082
+
+CMD [ "npm", "start" ]
